working register endpoint added: a new method to the SecurityConfig class that anables the Jwt verification and not the normal spring boot one now users can regster and the data is saved in sql database created and managed by spring boot(throug the classes User and UserRepository passwords are stored as hashes not the raw password in the database

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.username=root
 spring.datasource.password=mystrongpassword
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JPA/Hibernate settings
+# JPA/Hibernate settings this creates the tables with no external help
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
