AuthController - added cookies, removed code duplication JwrAuthenticationfilter the InnerFilter function now works with jwt tokens and cookies made the code more property dependent easier to deploy modified the html to use cookies

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 # JWT Configuration
 jwt.secret=CHANGE_THIS_TO_A_LONG_RANDOM_SECRET_AT_LEAST_256_BITS_MIN_32_CHARS
 jwt.expiration=3600000
+
+# Need to be changed when in production
+jwt.cookie.secure=false
